[package]
name    = "cc1101-embassy-rp2040-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rssi_scan"
path = "src/bin/rssi_scan.rs"

[[bin]]
name = "tx"
path = "src/bin/tx.rs"

[[bin]]
name = "rx"
path = "src/bin/rx.rs"

[dependencies]
cc1101-embassy = { path = "../../cc1101", features = ["defmt"] }

embassy-rp           = { version = "0.3", features = ["defmt", "rp2040", "time-driver", "critical-section-impl"] }
embassy-executor     = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time         = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync         = { version = "0.6", features = ["defmt"] }
embassy-embedded-hal = { version = "0.3", features = ["defmt"] }
defmt                = "0.3"
defmt-rtt            = "0.4"
panic-probe          = { version = "0.3", features = ["print-defmt"] }
cortex-m             = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt          = "0.7"
static_cell          = "2"
portable-atomic      = { version = "1", features = ["critical-section"] }
